# gnu_anubis

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog-CVS-old  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  TODO  bootstrap.conf  configure.ac  gnulib.modules
am/: .gitignore  anubis.m4  gnutls.m4  gpgme.m4  gsasl.m4  guile.m4
contrib/: Makefile.am  msg2smtp.pl  msg2smtp.txt
doc/: .cvsignore  Makefile.am  anubis.1  anubis.texi  fdl.texi  gendocs_template  index.html.in  mime.texi  pixie-dixie.pl.txt  pixie-dixie.texi  pixie-dixie.txt  rendition.texi
elisp/: .cvsignore  Makefile.am  anubis-mode.el
examples/: 1anubisrc  2anubisrc  Makefile.am  anubis.scm  anubisrc.guile
examples/pam/: Makefile.am  anubis  anubis.allow  anubis.deny
guile/: Makefile.am  entire-msg.scm  remailer.scm  rot-13.scm
lib/: .cvsignore  .gitignore  Makefile.am  argcv.c  argcv.h  getline.c  getline.h  keyword.c  keyword.h  lbuf.c  lbuf.h  setenv.c
m4/: .cvsignore  Makefile.am  anubis.m4  gnulib.m4  gpgme.m4  gsasl.m4  guile.m4
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  de.po  fr.po  ms.po  nb.po  nl.po  pl.po  ro.po  ru.po  tr.po  uk.po  vi.po
scripts/: Makefile.am  debian.init  redhat.init
src/: .cvsignore  .gitignore  Makefile.am  adm.opt  anubisadm.c  anubisadm.h  anubisdb.c  anubisusr.c  anubisusr.h  auth.c  authmode.c  daemon.c  dbtext.c  env.c  env.opt  errs.c  esmtp.c  exec.c  extern.h  files.c  gdbm.c  getopt.m4  gpg.c  gsasl.c  gsasl_srv.c  guile.c  headers.h  help.c  ident.c  lbuf.c  list.c  list.h  log.c  logport.c  main.c  main.h  map.c  md5.c  mda.c  mem.c  (+32 more)
testsuite/: .cvsignore  .gitignore  Makefile.am  findport.c  mta.c
testsuite/anubis/: DISTFILES  abase.exp  base.exp  gpg.exp  guile.exp  mime.exp  no-backref.exp  paolo.exp  tls.exp
testsuite/anubis.authmode/: DISTFILES  abase.exp  base.exp  gpg.exp  guile.exp  mime.exp
testsuite/data/: .cvsignore  Makefile.am  anubis.pem  append.txt  pubring.asc  secring.asc  users
testsuite/etc/: .cvsignore  Makefile.am  add-body-file.pat  add-body.pat  add.in  add1.pat  add2.pat  add3.pat  cond.in  cond.pat  del.in  del1.pat  del2.pat  del3.pat  del4.pat  empty.in  empty.pat  entire.in  gpg.in  gpgcrypt.pat  gpgse.pat  gpgsign.pat  interface.in.in  mime1.pat  mime2.pat  mod-body.in  mod-body.pat  mod-header.in  mod-header.pat  mult.pat  net.rc  no-backref.in  no-backref.pat  paolo.in  paolo.pat  remail.in  remail.pat  rot-13.pat  simple.in  std.in  (+7 more)
testsuite/lib/: DISTFILES  anubis.exp
